Bug 139418 - The layout is broken when opening a vertical writing manuscript paper(Genko yoshi) docx file
Summary: The layout is broken when opening a vertical writing manuscript paper(Genko y...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.4.2 release
Hardware: All All
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: target:25.8.0 target:25.2.4 inRelease...
Keywords: filter:docx
Depends on:
Blocks: CJK
  Show dependency treegraph
 
Reported: 2021-01-05 04:37 UTC by Jun Nogata
Modified: 2025-06-24 00:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Microsoft Word manuscript paper settings (56.48 KB, image/png)
2021-01-05 04:38 UTC, Jun Nogata
Details
Microsoft Word Screen shot (68.14 KB, image/png)
2021-01-05 04:39 UTC, Jun Nogata
Details
LibreOffice Writer Screen shot (75.61 KB, image/png)
2021-01-05 04:40 UTC, Jun Nogata
Details
Manuscript paper(Genko yoshi) sample file (docx) (32.46 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-01-05 04:41 UTC, Jun Nogata
Details
I reproduced it. (56.25 KB, image/png)
2021-01-18 00:14 UTC, Junichi Matsukawa
Details
I tested the improvement with a sample file. still needs improvement. (56.48 KB, image/png)
2023-05-25 23:48 UTC, Junichi Matsukawa
Details
I think the placement of the text is better. (112.76 KB, image/png)
2025-06-24 00:00 UTC, Junichi Matsukawa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jun Nogata 2021-01-05 04:37:29 UTC
Description:
When I open a vertical writing manuscript paper(Genko yoshi) docx file in LibreOffice Writer, the layout is so badly broken that I cannot use it.

Steps to Reproduce:
1. Launch Microsoft Word 
2. Go to [Layout]tab > Genko Setting

  Grid
    - Genko Style: Genko with grids
    - Row x Column: 20x20
  Page
    - Size: A4 / Orientation: Landscape
  Header and footer
    - Header: none / Footer: Row x Column
  Line break
    - Use Asian rules for controlling first and last characters
    - Allow hanging punctuation

3. Write the text in Word and save the file.(docx)
4. Open the docx file in LibreOffice writer. 

Actual Results:
The text is misaligned to the left, and moved to the bottom. It does not follow the grid. Disabling Skia has the same result.


Expected Results:
The text will be placed correctly along the squares.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
* Genko yoshi: https://en.wikipedia.org/wiki/Genk%C5%8D_y%C5%8Dshi
* Microsoft word (Microsoft 365) Version 2011 (Build 13426.20404) with Japanese Language locale

----
Version: 7.0.4.2 (x64)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 2; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: threaded
Comment 1 Jun Nogata 2021-01-05 04:38:55 UTC
Created attachment 168685 [details]
Microsoft Word manuscript paper settings
Comment 2 Jun Nogata 2021-01-05 04:39:56 UTC
Created attachment 168686 [details]
Microsoft Word Screen shot
Comment 3 Jun Nogata 2021-01-05 04:40:28 UTC
Created attachment 168687 [details]
LibreOffice Writer Screen shot
Comment 4 Jun Nogata 2021-01-05 04:41:35 UTC
Created attachment 168688 [details]
Manuscript paper(Genko yoshi) sample file (docx)
Comment 5 Junichi Matsukawa 2021-01-18 00:14:10 UTC
Created attachment 168970 [details]
I reproduced it.

I reproduced it.
It is out of position on the graph paper.

Version: 7.0.4.2 (x64)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: default; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL
Comment 6 Junichi Matsukawa 2021-01-18 00:15:11 UTC
reproduced it.
Comment 7 QA Administrators 2023-01-19 03:24:54 UTC Comment hidden (obsolete)
Comment 8 Roman Kuznetsov 2023-05-07 13:06:29 UTC
in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 69d0be09ad81935f7da4b6f8d036c3562357d068
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL threaded

the example DOCX looks so much better but it still has some problem
Comment 9 Junichi Matsukawa 2023-05-25 23:48:23 UTC
Created attachment 187510 [details]
I tested the improvement with a sample file. still needs improvement.

I tested the improvement with a sample file. still needs improvement.
  
Version: 7.6.0.0.alpha1 (X86_64) / LibreOffice Community
Build ID: 9366f83c88fc93d40ea0c0035508f24ad5dcb144
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded
Comment 10 Bertha Farley 2023-10-08 15:52:37 UTC Comment hidden (spam)
Comment 11 Commit Notification 2025-04-10 09:42:26 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/756bcac94f122b0bed6f2835ec1170406e1b8606

tdf#139418 DOCX import: Fix generated genko yoshi grid layout issues

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-04-11 19:09:02 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/576d6f773e1a04a1fc76cc121e948be67ba16ff6

tdf#139418 DOCX import: Fix generated genko yoshi grid layout issues

It will be available in 25.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Junichi Matsukawa 2025-06-24 00:00:25 UTC
Created attachment 201436 [details]
I think the placement of the text is better.

I think the character placement has improved. The ruby ​​is not so good.