tdf#139418 DOCX import: Fix generated genko yoshi grid layout issues

This change includes fixes for three minor grid layout issues affecting
correct display of generated genko yoshi manuscript documents.

- Due to the way OOXML stores grid parameters, the default Asian font
  height must be known in order to correctly calculate the grid
  character pitch. This change fixes a regression from tdf#107359 which
  caused the OOXML importer to always use the hard-coded default
  character width in certain situations.

- The fix for tdf#149089 caused a regression by also removing the grid
  kerning portions from vertical text, when it correctly should only
  have affected horizontal text.

- For correct interop, the ADD_EXT_LEADING compatibility flag is now
  ignored for vertical text when the MS_WORD_COMP_GRID_METRICS
  compatibility flag is set.

Change-Id: I5aaa245293932d64ff5c4dd4a3f45c4d8bc4a22e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183959
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Tested-by: Jenkins
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184011